# crewai-whatsapp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  git  pyproject.toml
data/: README.md
knowledge/: README.md
knowledge/patterns/: topics.yaml
knowledge/rules/: filters.yaml
knowledge/templates/: daily.md
src/whatsapp_crew/: crew.py  main.py  scheduler.py
src/whatsapp_crew/config/: README.md  agents.yaml  tasks.yaml
src/whatsapp_crew/tools/: README.md  message_analyzer.py  message_storage.py  summary_storage.py  whatsapp_api.py  whatsapp_tool.py
src/whatsapp_group_activity_summary_crew_formation/: crew.py  main.py
src/whatsapp_group_activity_summary_crew_formation/config/: tasks.yaml  whatsapp_config.yaml
src/whatsapp_group_activity_summary_crew_formation/tools/: whatsapp_tool.py
